src/objects/Position__c.object
<CustomObject>
    <description>Positions releted to the project</description>
    <fields>
        <fullName>AllottedProfile__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Allotted Profile</label>
        <referenceTo>Profile__c</referenceTo>
        <relationshipLabel>Positions</relationshipLabel>
        <relationshipName>Positions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <label>Duration (Hrs)</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>End_date__c</fullName>
        <formula>IF(  

ISPICKVAL(Status__c ,&quot;E-Filled&quot;) &amp;&amp; Duration__c &lt;&gt; 0 ,  

Start_Date__c  +  ROUND( Duration__c / 8,0) , Start_Date__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <picklist>
            <picklistValues>
                <fullName>Onshore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Offshore</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Positions</relationshipLabel>
        <relationshipName>Positions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ResourceName__c</fullName>
        <formula>AllottedProfile__r.First_Name__c +&apos; &apos;+  AllottedProfile__r.Last_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Resource Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ResourcePool__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Resource Pool</label>
        <referenceTo>Resource_Pool__c</referenceTo>
        <relationshipLabel>Positions</relationshipLabel>
        <relationshipName>Positions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Resource_Email__c</fullName>
        <label>Resource Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Skill_Name__c</fullName>
        <formula>Skill__r.Skill_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Skill Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Skill__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Skill</label>
        <referenceTo>Skill__c</referenceTo>
        <relationshipLabel>Positions</relationshipLabel>
        <relationshipName>Positions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>A-Build</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>B-Analyze</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C-Int. Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D-Source</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E-Filled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F-Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>G-Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>H- On Hold</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Position</label>
    <nameField>
        <label>Position Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Positions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>